@@ -16,11 +16,8 @@ solving linear and nonlinear problems numerically.
 
 <h2>News</h2>
 <p>
-Version 2.0.3 was released Tuesday February 18, 1997.  Most bugs
+Version 2.0.4 was released Wednesday February 19, 1997.  Most bugs
 reported since the release of version 2.0 have been fixed.
-Unfortunately, there are a few glitches in the installation procedure
-that will cause trouble on a few systems.  Look for 2.0.4 to correct
-these minor problems fairly soon.
 </p>
 
 <p>
