@@ -24,7 +24,11 @@
 
 @defindex op
 
-@include ../conf.texi
+@c Things like the Octave version number are defined in conf.texi.
+@c This file doesn't include a chapter, so it must not be included
+@c if you want to run the Emacs function texinfo-multiple-files-update.
+
+@include conf.texi
 
 @settitle Octave C++ Classes
 
